[package]
name = "netpup"
version = "1.2.6"
edition = "2021"
license = "MIT"
description = "Super easy && simple http server"
authors = ["MOBSkuchen"]
keywords = ["http-server", "server", "http"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/MOBSkuchen/netpup"
homepage = "https://crates.io/crates/netpup"

[dependencies]
chrono = "0.4.39"
colorize-rs = "0.1.2"
lua-src = "547.0.0"
mlua = { version = "0.10.2", features = ["lua54", "vendored"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
